# cookiecutter-pyanalysis

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.template  .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: hello.ipynb
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
