[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
requires-python = "~={{ cookiecutter.python_version }}"
dependencies = [
    {% if cookiecutter.notebooks %}-
    { name = "ipykernel", version = "^6.29.5" },
    {% endif -%}
]

[build-system]
requires = ["uv_build~=0.7.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
